--- a/templates/login.html
+++ b/templates/login.html
@@ -2,19 +2,18 @@ $def with (company, pagename)
 <!doctype html>
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>$company :: $pagename</title>
         <link rel="icon" href="/static/img/favicon.png" type="image/png" /> 
-        <link rel="stylesheet" type="text/css" href="/static/css/login.css" />
+        <link rel="stylesheet" type="text/css" href="static/css/login.css" />
     </head>
-    <!--<h1>$company</h1>-->
     <div id="login-box">
     <div id="car">
         <form id="form" method="post" action="login">
            <label>Usuario</label> 
-           <input type="text" name="user" class="input" />
-           <label>Contraseña</label>
-           <input type="password" name="passwd" class="input" />
-           <!--<div class="submit"><input id="submit" type="submit" value />-->
+           <input type="text" name="user" class="input" required title="Se necesita un nombre de usuario" />
+           <label>Contrase&ntilde;a</label>
+           <input type="password" name="passwd" class="input" required title="Se necesita una contraseña"/>
            <div class="submit"><input class="boton" type="submit" value="Entrar" />
            </div>
         </form>
